add new module inventory outlet, minor fix for sales order module, some added lang in item_lang.php

--- a/public/css/custom.css
+++ b/public/css/custom.css
@@ -21,3 +21,8 @@
 #detail-table-so td.fix-align{
     padding-top: 13px !important;
 }
+#customer-name{
+    text-align: center;
+    font-size: 18px;
+    font-weight: 600;
+}
