--- a/public/css/custom.css
+++ b/public/css/custom.css
@@ -26,3 +26,15 @@
     font-size: 18px;
     font-weight: 600;
 }
+#logo{
+    text-align: right !important;
+    margin-top: 15px;
+    margin-bottom: 15px !important;
+    float: right !important;
+    border: 1px solid #fff;
+}
+#customer-title{
+    height: 100px;
+    float: right;
+    margin-top: 45px !important;
+}
