--- a/public/css/custom.css
+++ b/public/css/custom.css
@@ -38,3 +38,14 @@
     float: right;
     margin-top: 45px !important;
 }
+.company-logo-po{
+    width: 110px;
+    float: left;
+    vertical-align: middle;
+}
+.company-title-po{
+    vertical-align: middle;
+    width: 800px;
+    margin-bottom: 25px;
+    padding-top: 20px;
+}
