--- a/public/css/custom.css
+++ b/public/css/custom.css
@@ -49,3 +49,19 @@
     margin-bottom: 25px;
     padding-top: 20px;
 }
+table.summary-table thead th{
+    background: #387975 !important;
+    color: #fff !important;
+    text-transform: uppercase;
+}
+table.summary-table tbody td:nth-child(1),
+table.summary-table tbody td:nth-child(2){
+    background: #99968f !important;
+    color: #fff !important;
+    text-transform: uppercase;
+}
+table.summary-table tbody tr:last-child td{
+    background: #fff !important;
+    color: #2c3e50 !important;
+    text-transform: uppercase;
+}
