modified payment to supplier table and sales summary table

--- a/public/css/custom.css
+++ b/public/css/custom.css
@@ -50,7 +50,8 @@
     padding-top: 20px;
 }
 table.summary-table thead th,
-table.sales-summary-table thead th{
+table.sales-summary-table thead th,
+table.payment-supplier-table thead th{
     background: #387975 !important;
     color: #fff !important;
     text-transform: uppercase;
@@ -60,20 +61,25 @@ table.summary-table tbody td:nth-child(2),
 table.sales-summary-table tbody td:nth-child(1),
 table.sales-summary-table tbody td:nth-child(2),
 table.sales-summary-table tbody td:nth-child(3),
-table.sales-summary-table tbody td:nth-child(4)
+table.sales-summary-table tbody td:nth-child(4),
+table.payment-supplier-table tbody td:nth-child(1),
+table.payment-supplier-table tbody td:nth-child(2),
+table.payment-supplier-table tbody td:nth-child(3)
 {
     background: #99968f !important;
     color: #fff !important;
     text-transform: uppercase;
 }
 table.summary-table tbody tr:last-child td,
-table.sales-summary-table tbody tr:last-child td{
+table.sales-summary-table tbody tr:last-child td,
+table.payment-supplier-table tbody tr:last-child td{
     background: #fff !important;
     color: #2c3e50 !important;
     text-transform: uppercase;
     border-top: 1px solid #999;
 }
-table.sales-summary-table td{
+table.sales-summary-table td,
+table.payment-supplier-table td{
     font-weight: bold;
     line-height: 18px !important;
 }
