--- a/public/css/ospos_print.css
+++ b/public/css/ospos_print.css
@@ -74,4 +74,12 @@
 	{
 		padding-right: 10px;
 	}
+
+	.width-small{
+		width : 100px !important;
+	}
+	.width-medium{
+		width : 800px !important;
+	}
+
 }
